# reed-muller-simulation

./: Cargo.toml  README.md
src/: experiments.rs  main.rs  parameters.rs
src/channel/: channel.rs  channel_errors.rs  mod.rs  reed_muller.rs  split_vector.rs
src/input/: input_fields.rs  mod.rs  text_area_v2.rs
src/math/: matrix.rs  vector.rs
src/tui/: image_scenario.rs  mod.rs  setup.rs  shared.rs  text_scenario.rs  vector_scenario.rs
