[package]
name = "reed-muller_code"
version = "0.1.0"
authors = ["Kara <https://github.com/Karalynx>"]
description = "An interactive program that simulates Reed-Muller RM(1, m) error-correcting code."
edition = "2021"
keywords = ["error-correction", "reed-muller"]
categories = ["algorithms", "encoding"]
exclude = [
	".gitignore",
	".github/*"
]

[dependencies]
charming = { version = "0.4.0", features = ["ssr"] }
clap = { version = "4.5.20", features = ["derive"] }
cursive = "0.21.1"
magick_rust = "1.0.0"
open = "5.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rfd = "0.15.0"

unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
